--- a/assets/css/common.less
+++ b/assets/css/common.less
@@ -1,19 +1,20 @@
-@import url(https://fonts.googleapis.com/css?family=Ubuntu:400,500&subset=latin,cyrillic);
+@import url(https://fonts.googleapis.com/css?family=Kurale|Ubuntu&subset=latin,cyrillic);
 @import "settings.less";
 @import "icons.less";
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 /*	Fonts start								  */
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
-h1, h2, h3, h5, h5, h6, p, span, time, a{
+h1, h2, h3, h5, h5, h6, p, span, time, a, small{
 	font-family: 'Ubuntu', sans-serif;
-	font-weight: normal;
+	font-weight: 400;
 	color: @black;
 	outline: none;
+	text-align: center;
 }
-h1, h2, h3{ font-weight: bold; }
+h1, h2, h3{ font-weight: 500; }
 h1{ font-size: 3.75em; }
 h2{ font-size: 2.25em; }
-h3{ font-size: 1.75em; }
+h3{ font-size: 1.125em; }
 p, a, time{ font-size: 0.875em; }
 a{ text-decoration: none; }
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
@@ -31,11 +32,17 @@ a{ text-decoration: none; }
 .row,
 .cell{
 	width: 100%;
+	height: auto;
 	overflow: hidden;
+}
+#page{
+	height: 100%;
+	min-height: 100%;
 }
 .inner,
 .grid{
 	max-width: 1200px;
+	margin: 0 auto;
 }
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 /*	layout end								  */
@@ -44,7 +51,116 @@ a{ text-decoration: none; }
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 /*	header start							  */
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
-
+#header{
+	background: @white;
+	& > .inner{
+		padding-top: 40px;
+		position: relative;
+		overflow: visible;
+		.logo{
+			width: 220px;
+			height: 210px;
+			position: absolute;
+			top: 20px;
+			left: 0;
+			z-index: 10;
+			background: @white;
+			border: 2px solid @green;
+			box-sizing: border-box;
+			overflow: hidden;
+			& > img{
+				width: 180px;
+				height: auto;
+				margin: 40px auto 0;
+			}
+		}
+	}
+	.info-holder{
+		width: 100%;
+		height: 60px;
+		margin: 0 auto 30px;
+		padding-left: 240px;
+		box-sizing: border-box;
+		position: relative;
+		overflow: visible;
+		ul{
+			float: right;
+			text-align: right;
+			margin-left: 20px;
+			& > li{
+				line-height: 20px;
+				h3{
+					font-size: 1.125em;
+					text-transform: uppercase;
+				}
+				a{
+					font-weight: 500;
+					transition: all .5s @easing;
+					&:hover{
+						color: @green;
+					}
+				}
+			}
+			&.langs-holder{
+				display: block;
+				width: 40px;
+				float: left;
+				margin: 0;
+				& > li{
+					display: block;
+					width: 40px;
+					height: 20px;
+					a{
+						display: block;
+						width: 100%;
+						height: 100%;
+						position: relative;
+						line-height: 20px;
+						font-weight: 500;
+						text-align: center;
+						text-transform: uppercase;
+						color: @black;
+						&:before{
+							display: block;
+							width: 2px;
+							height: 100%;
+							position: absolute;
+							top: 0;
+							left: 0;
+							content: "";
+							background: @black;
+							transition: all .5s @easing;
+							overflow: hidden;
+						}
+					}
+					&:hover,
+					&.active{
+						a{
+							color: @green;
+							&:before{
+								background: @green;
+							}
+						}
+					}
+				}
+			}
+			&.call-center-holder{
+				& > li{
+					a{
+						color: @green;
+					}
+				}
+			}
+		}
+		.separator-vertical{
+			margin: 0 20px 0 10px;
+			float: right;
+		}
+		.btn-large{
+			float: right;
+		}
+	}
+}
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 /*	header end								  */
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
@@ -52,31 +168,190 @@ a{ text-decoration: none; }
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 /*	menu start								  */
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
-
+#menu-holder{
+	width: 100%;
+	height: 60px;
+	background: @green;
+	overflow: hidden;
+	.menu{
+		display: block;
+		width: 100%;
+		padding-left: 240px;
+		box-sizing: border-box;
+		overflow: hidden;
+		ul{
+			display: flex;
+			justify-content: space-between;
+		}
+		li{
+			height: 60px;
+			position: relative;
+			overflow: hidden;
+			a{
+				display: block;
+				height: 60px;
+				line-height: 60px;
+				position: relative;
+				text-transform: uppercase;
+				font-weight: 500;
+				color: @white;
+				&:before{
+					display: block;
+					width: 100%;
+					height: 4px;
+					position: absolute;
+					left: 0;
+					bottom: 0;
+					content: "";
+					background: @white;
+					transition: all .5s @easing;
+					transform: translateY(100%);
+					backface-visibility: hidden;
+					overflow: hidden;
+				}
+			}
+			&:hover,
+			&.active{
+				a:before{
+					transform: translateY(0%);
+				}	
+			}
+		}
+	}
+}
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 /*	menu end								  */
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
-/*	btns start								  */
-/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
-
-/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
-/*	btns end								  */
-/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
-
-/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
-/*	forms start								  */
-/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
-
-/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
-/*	forms end								  */
-/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
-
-/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 /*	footer start							  */
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+#footer{
+	width: 100%;
+	height: auto;
+	overflow: hidden;
+	.pre-footer{
+		background: @grey;
+		overflow: hidden;
+		.part{
+			width: 25%;
+			float: left;
+			margin: 60px 0;
+			overflow: hidden;
+			h3{
+				text-transform: uppercase;
+			}
+			.separator-horizontal{
+				margin: 20px auto;
+			}
+		}
+		.part.contacts{
+			ul{
+				display: block;
+				width: 100%;
+				overflow: hidden;
+			}
+			li{
+				display: block;
+				width: 100%;
+				margin-top: 10px;
+				overflow: hidden;
+			}
+			.item{
+				display: inline-block;
+				font-size: .875em;
+				padding: 5px 20px 0 0;
+				text-align: left;
+			}
+			*[class^="hr"]{
+				display: inline-block;
+				margin-right: 5px;
+				color: @black;
+				font-size: 1.25em;
+			}
+		}
+		.part.navigation{
+			width: 50%;
+			ul,
+			.list-holder{
+				width: 100%;
+				overflow: hidden;
+			}
+			li{
+				display: block;
+				width: 50%;
+				float: left;
+				padding-left: 20px;
+				box-sizing: border-box;
+				overflow: hidden;
+				& > a{
+					line-height: 20px;
+					color: @black;
+					transition: all .5s @easing;
+				}
+				&:hover a{
+					color: @green;
+				}
+			}
+		}
+		.part.entrance{
 
+		}
+	}
+	& > footer{
+		width: 100%;
+		max-height: 120px;
+		margin: 0 auto;
+		position: relative;
+		background: @green;
+		overflow: hidden;
+		.logo{
+			display: block;
+			width: 300px;
+			float: left;
+		}
+		.social-holder{
+			width: 160px;
+			position: absolute;
+			top: 5px;
+			left: 50%;
+			margin-left: -80px;
+			li{
+				display: block;
+				float: left;
+				a{
+					color: @white;
+					font-size: 1.125em;
+					transition: all .5s @easing;
+					&:hover{
+						color: @black;
+					}
+				}
+			}
+		}
+		.copyright{
+			display: block;
+			width: 100%;
+			position: absolute;
+			left: 0;
+			bottom: 0;
+			font-size: .875em;
+			color: @white;
+			padding-bottom: 10px;
+			overflow: hidden;
+		}
+		.developers{
+			width: 300px;
+			float: right;
+			overflow: hidden;
+			img{
+				margin-top: 10px;
+				width: 180px;
+				float: right;
+			}
+		}
+	}
+}
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 /*	footer end								  */
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
