--- a/assets/css/home.less
+++ b/assets/css/home.less
@@ -1,9 +1,254 @@
 @import "settings.less";
-@import "icons.less";
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 /*	layout start							  */
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
-
+.outer{
+	& > .inner{
+		margin-top: 60px;
+		h2{
+			text-transform: uppercase;
+			text-align: center;
+		}
+	}
+}
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 /*	layout end								  */
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+/*	intro start								  */
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+.outer.intro-holder{
+	width: 100%;
+	position: relative;
+	.slider{
+		display: block;
+	}
+	& > .inner{
+		height: auto;
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		z-index: 5;
+		margin-top: 0;
+		transform: translateX(-50%) translateY(-50%);
+		backface-visibility: hidden;
+		overflow: hidden;
+		.entitled{
+			width: 500px;
+			float: right;
+			overflow: hidden;
+		}
+		h1{
+			font-family: "Kurale", sans-serif;
+			background: fade(@white, 80%);
+			text-align: center;
+			padding: 0 20px 5px;
+			color: @green;
+		}
+		h2{
+			font-size: 1.125em;
+			text-transform: uppercase;
+			text-align: right;
+			color: @white;
+			padding: 5px 20px;
+			background: fade(@green, 80%);
+		}
+		.btn-more{
+			margin-top: 20px;
+			float: right;
+			.long-arrow{
+				margin-left: 5px;
+			}
+			.text{
+				color: @green;
+			}
+			&:hover{
+				.text{ color: @white; }
+				.long-arrow{
+					&:before{ background: @white; }
+					&:after{ border-left: 6px solid @white; }
+					transform: translateX(10px);
+				}
+			}
+		}
+	}
+}
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+/*	intro end								  */
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+/*	project start							  */
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+.outer.project-holder{
+	.benefits-holder{
+		width: 100%;
+		margin-top: 60px;
+		overflow: hidden;
+		ul{
+			display: block;
+			width: 100%;
+		}
+		li{
+			display: block;
+			width: 33.33%;
+			float: left;
+			overflow: hidden;
+		}
+		.separator-horizontal{
+			margin-top: 20px;
+			background: @black;
+		}
+		p{
+			padding: 0 20px;
+		}
+	}
+}
+#watch-movie{
+	width: 100%;
+	height: auto;
+	margin: 60px auto;
+	overflow: hidden;
+	a{
+		display: block;
+		width: 100%;
+		height: 40px;
+		text-align: center;
+	}
+	span{
+		display: inline-block;
+		text-transform: uppercase;
+		line-height: 40px;
+		font-size: 1.25em;
+		color: @green;
+	}
+	span.hr-play{
+		width: auto;
+		height: auto;
+		font-size: 1.75em;
+		margin-right: 10px;
+	}
+}
+#movie-holder{
+	width: 100%;
+	height: 100%;
+	position: fixed;
+	top: 0;
+	left: 0;
+	z-index: 20;
+	background: fade(@white, 70%);
+	opacity: 0;
+	visibility: hidden;
+	overflow: hidden;
+	& > .inner{
+		height: 0;
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		padding-bottom: 75%;
+		background: red;
+		transform: translateX(-50%) translateY(-50%);
+		-webkit-overflow-scrolling: touch;
+		opacity: 0;
+		transition: all .25s @easing;
+		overflow: hidden;
+		& > iframe{
+			width: 100%;
+			height: 100%;
+			position: absolute;
+			top: 0;
+			left: 0;
+			border: none;
+		}
+	}
+	&.active{
+		cursor: url("@{images}/cursor-close.png"), auto;
+		opacity: 1;
+		visibility: visible;
+		transition: all .5s @easing;
+		& > .inner{
+			opacity: 1;
+			transition: all .25s @easing .25s;
+		}
+	}
+}
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+/*	project end								  */
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+/*	suppliers start							  */
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+.outer.suppliers-holder{
+	background: @grey;
+	.inner{
+		max-width: 100%;
+	}
+	.suppliers{
+		width: 100%;
+		margin: 40px auto 60px;
+		text-align: center;
+		li{
+			display: inline-block;
+			vertical-align: top;
+			width: 130px;
+			height: auto;
+			overflow: hidden;
+			margin: 0 10px;
+		}
+	}
+}
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+/*	suppliers end							  */
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+/*	questions start							  */
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+.outer.questions-holder{
+	.separator-horizontal{
+		margin-bottom: 40px;
+	}
+	.questions{
+		overflow: hidden;
+		li{
+			display: block;
+			width: 33.3%;
+			float: left;
+			text-align: right;	
+		}
+		*[class^="hr"]{
+			color: @black;
+		}
+		.separator-horizontal{
+			background: @black;
+			margin: 20px auto;
+		}
+		p{
+			padding: 0 20px;
+			text-align: center;
+		}
+		a{
+			display: inline-block;
+			margin: 20px 20px 0 0;
+			color: @green;
+			& > .long-arrow{
+				margin-left: 10px;
+				transition: all .5s ease;
+				transform: translateX(0px);
+			}
+			&:hover{
+				.long-arrow{
+					transform: translateX(10px);
+				}
+			}
+		}
+	}
+	.btn-small{
+		margin: 60px auto;
+	}
+}
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+/*	questions end							  */
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
