--- a/assets/css/home.less
+++ b/assets/css/home.less
@@ -225,6 +225,11 @@
 			background: @black;
 			margin: 20px auto;
 		}
+		h3{
+			font-size: 1em;
+			text-transform: uppercase;
+			margin-bottom: 10px;
+		}
 		p{
 			padding: 0 20px;
 			text-align: center;
