--- a/assets/css/common.less
+++ b/assets/css/common.less
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Kurale|Ubuntu&subset=latin,cyrillic);
+@import url(https://fonts.googleapis.com/css?family=Ubuntu:400,500|Kurale&subset=latin,cyrillic);
 @import "settings.less";
 @import "icons.less";
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
@@ -15,7 +15,7 @@ h1, h2, h3{ font-weight: 500; }
 h1{ font-size: 3.75em; }
 h2{ font-size: 2.25em; }
 h3{ font-size: 1.125em; }
-p, a, time{ font-size: 0.875em; }
+p, a, time{ font-size: 1em; }
 a{ text-decoration: none; }
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 /*	Fonts end								  */
@@ -94,7 +94,7 @@ a{ text-decoration: none; }
 					text-transform: uppercase;
 				}
 				a{
-					font-weight: 500;
+					font-weight: 400;
 					transition: all .5s @easing;
 					&:hover{
 						color: @green;
@@ -102,7 +102,7 @@ a{ text-decoration: none; }
 				}
 			}
 			&.langs-holder{
-				display: block;
+				display: none;
 				width: 40px;
 				float: left;
 				margin: 0;
@@ -153,10 +153,11 @@ a{ text-decoration: none; }
 			}
 		}
 		.separator-vertical{
-			margin: 0 20px 0 10px;
+			margin: 0 0px 0 10px;
 			float: right;
 		}
 		.btn-large{
+			display: none;
 			float: right;
 		}
 	}
@@ -170,7 +171,7 @@ a{ text-decoration: none; }
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 #menu-holder{
 	width: 100%;
-	height: 60px;
+	height: 2px;
 	background: @green;
 	overflow: hidden;
 	.menu{
@@ -231,6 +232,7 @@ a{ text-decoration: none; }
 	height: auto;
 	overflow: hidden;
 	.pre-footer{
+		display: none;
 		background: @grey;
 		overflow: hidden;
 		.part{
@@ -294,9 +296,6 @@ a{ text-decoration: none; }
 				}
 			}
 		}
-		.part.entrance{
-
-		}
 	}
 	& > footer{
 		width: 100%;
@@ -344,9 +343,15 @@ a{ text-decoration: none; }
 			width: 300px;
 			float: right;
 			overflow: hidden;
+			p{
+				margin-top: 18px;
+				text-align: right;
+				color: @white;
+				font-size: .875em;
+			}
 			img{
-				margin-top: 10px;
-				width: 180px;
+				margin-top: -10px;
+				width: 160px;
 				float: right;
 			}
 		}
