logo and analytics

--- a/assets/css/common.less
+++ b/assets/css/common.less
@@ -58,8 +58,9 @@ a{ text-decoration: none; }
 		position: relative;
 		overflow: visible;
 		.logo{
-			width: 220px;
-			height: 210px;
+			/* 220 x 210 */
+			width: 180px;
+			height: 170px;
 			position: absolute;
 			top: 20px;
 			left: 0;
@@ -68,10 +69,10 @@ a{ text-decoration: none; }
 			border: 2px solid @green;
 			box-sizing: border-box;
 			overflow: hidden;
-			& > img{
-				width: 180px;
+			img{
+				width: 140px;
 				height: auto;
-				margin: 40px auto 0;
+				margin: 33px auto 0;
 			}
 		}
 	}
