--- a/assets/css/icons.less
+++ b/assets/css/icons.less
@@ -67,9 +67,6 @@
 .hr-use-hand:before {
   content: "\e009";
 }
-.hr-vk:before {
-  content: "\e00a";
-}
 .hr-get-card:before {
   content: "\e00b";
 }
@@ -93,5 +90,20 @@
 }
 .hr-play:before {
   content: "\e012";
+}
+.hr-vk:before {
+  content: "\e00a";
+}
+.hr-close:before {
+  content: "\e013";
+}
+.hr-life:before {
+  content: "\e014";
+}
+.hr-kstar:before {
+  content: "\e015";
+}
+.hr-mtc:before {
+  content: "\e016";
 }
 
