--- a/assets/css/home.less
+++ b/assets/css/home.less
@@ -83,9 +83,12 @@
 /*	project start							  */
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 .outer.project-holder{
+	p{
+		padding-bottom: 20px;
+	}
 	.benefits-holder{
 		width: 100%;
-		margin-top: 60px;
+		margin-top: 40px;
 		overflow: hidden;
 		ul{
 			display: block;
@@ -165,8 +168,22 @@
 			overflow: hidden;
 		}
 	}
+	& > .close{
+		display: block;
+		width: 40px;
+		height: 40px;
+		position: absolute;
+		top: 20px;
+		right: 20px;
+		cursor: pointer;
+		color: @black;
+		font-size: 2em;
+		transition: all .5s @easing;
+		&:hover{
+			color: @green;
+		}
+	}
 	&.active{
-		cursor: url("@{images}/cursor-close.png"), auto;
 		opacity: 1;
 		visibility: visible;
 		transition: all .5s @easing;
@@ -224,6 +241,8 @@
 		}
 		*[class^="hr"]{
 			color: @black;
+			font-size: 3em;
+			padding-bottom: 10px;
 		}
 		.separator-horizontal{
 			background: @black;
