--- a/assets/css/lib/icons.less
+++ b/assets/css/lib/icons.less
@@ -106,4 +106,22 @@
 .hr-mtc:before {
   content: "\e016";
 }
+.hr-banana:before {
+  content: "\e017";
+}
+.hr-cake:before {
+  content: "\e018";
+}
+.hr-cookies:before {
+  content: "\e019";
+}
+.hr-juice:before {
+  content: "\e01a";
+}
+.hr-soup:before {
+  content: "\e01b";
+}
+.hr-water:before {
+  content: "\e01c";
+}
 
