--- a/assets/css/lib/common.less
+++ b/assets/css/lib/common.less
@@ -1,4 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Ubuntu:400,500|Kurale&subset=latin,cyrillic);
+@import "reset.less";
 @import "settings.less";
 @import "icons.less";
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
@@ -12,8 +13,8 @@ h1, h2, h3, h5, h5, h6, p, span, time, a, small{
 	text-align: center;
 }
 h1, h2, h3{ font-weight: 500; }
-h1{ font-size: 3.75em; }
-h2{ font-size: 2.25em; }
+h1{ font-size: 2.25em; }
+h2{ font-size: 1.5em; }
 h3{ font-size: 1.125em; }
 p, a, time{ font-size: 1em; }
 a{ text-decoration: none; }
@@ -35,9 +36,13 @@ a{ text-decoration: none; }
 	height: auto;
 	overflow: hidden;
 }
-#page{
-	height: 100%;
-	min-height: 100%;
+#page{ min-height: 100%; }
+#content.sticky{ padding-bottom: 120px; }
+#content > .outer.inside{
+	width: 100%;
+	max-width: 1200px;
+	margin: 80px auto;
+	overflow: hidden;
 }
 .inner,
 .grid{
@@ -58,9 +63,8 @@ a{ text-decoration: none; }
 		position: relative;
 		overflow: visible;
 		.logo{
-			/* 220 x 210 */
-			width: 180px;
-			height: 170px;
+			width: 220px;
+			height: 210px;
 			position: absolute;
 			top: 20px;
 			left: 0;
@@ -70,9 +74,9 @@ a{ text-decoration: none; }
 			box-sizing: border-box;
 			overflow: hidden;
 			img{
-				width: 140px;
+				width: 180px;
 				height: auto;
-				margin: 33px auto 0;
+				margin: 38px auto 0;
 			}
 		}
 	}
@@ -186,7 +190,7 @@ a{ text-decoration: none; }
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 #menu-holder{
 	width: 100%;
-	height: 2px;
+	height: 60px;
 	background: @green;
 	overflow: hidden;
 	.menu{
@@ -240,135 +244,264 @@ a{ text-decoration: none; }
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
-/*	footer start							  */
+/*	navigation start						  */
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
-#footer{
-	width: 100%;
+#navigation-holder{
+	width: 240px;
 	height: auto;
+	float: left;
+	border-right: 2px solid @grey;
+	box-sizing: border-box;
 	overflow: hidden;
-	.pre-footer{
-		display: none;
-		background: @grey;
-		overflow: hidden;
-		.part{
-			width: 25%;
-			float: left;
-			margin: 60px 0;
-			overflow: hidden;
-			h3{
+	ul, li{
+		display: block;
+		width: 100%;
+		height: auto;
+	}
+	ul{
+		margin: 20px 0;
+	}
+	li{
+		a{
+			display: block;
+			width: 100%;
+			padding: 6px 20px 6px 0;
+			text-align: left;
+			transition: all .5s @easing;
+			box-sizing: border-box;
+			&:first-letter{
 				text-transform: uppercase;
 			}
-			.separator-horizontal{
-				margin: 20px auto;
+		}
+		&:hover,
+		&.active{
+			a{
+				color: @green;
 			}
 		}
-		.part.contacts{
-			ul{
-				display: block;
-				width: 100%;
-				overflow: hidden;
+	}
+}
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+/*	navigation end							  */
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+/*	info holder start						  */
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+#content-info-holder{
+	width: ~"calc(100% - 280px)";
+	height: auto;
+	float: left;
+	margin-left: 40px;
+	overflow: hidden;
+	h1, h2, h3{
+		margin-top: 20px;
+		&:first-child{
+			margin-top: 0;
+		}
+	}
+	h1, h2, h3, p, span{
+		text-align: left;
+		font-weight: normal;
+	}
+	*[class^="separator"]{
+		margin: 40px 0 20px;
+	}
+	p{ padding-bottom: 20px; }
+	.icons-hor{
+		margin: 20px auto;
+		ul{ text-align: center; }
+		li{
+			display: inline-block;
+			vertical-align: top;
+			white-space: -1;
+			margin-left: -4px;
+			padding: 0 20px;
+			box-sizing: border-box;
+			&:first-child{
+				margin-left: 0;
 			}
-			li{
-				display: block;
-				width: 100%;
-				margin-top: 10px;
-				overflow: hidden;
-			}
-			.item{
-				display: inline-block;
-				font-size: .875em;
-				padding: 5px 20px 0 0;
-				text-align: left;
-			}
-			*[class^="hr"]{
-				display: inline-block;
-				margin-right: 5px;
-				color: @black;
-				font-size: 1.25em;
+			& > .icon{
+				font-size: 2.25em;
+				color: @green;
 			}
 		}
-		.part.navigation{
+	}
+	.list-holder{
+		ul, li{
+			display: block;
+			width: 100%;
+			height: auto;
+		}
+		li{
+			position: relative;
+			margin-bottom: 20px;
+			&:before{
+				display: block;
+				width: 8px;
+				height: 8px;
+				position: absolute;
+				top: 50%;
+				left: 10px;
+				margin-top: -4px;
+				content: "";
+				background: @green;
+				overflow: hidden;
+			}
+			p{
+				padding: 0 20px 0 38px;
+			}
+			.description{
+				display: block;
+				padding: 20px 20px 0 38px;
+			}
+		}
+		&.black{
+			li:before{
+				width: 6px;
+				height: 6px;
+				margin-top: -3px;
+				background: @black;
+			}
+		}
+	}
+	.attention{
+		color: @green;
+		font-weight: 500;
+	}
+	p > strong{
+		font-weight: 500;
+	}
+}
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+/*	info holder end							  */
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+/*	footer start							  */
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+.pre-footer{
+	display: none;
+	background: @grey;
+	overflow: hidden;
+	.part{
+		width: 25%;
+		float: left;
+		margin: 60px 0;
+		overflow: hidden;
+		h3{
+			text-transform: uppercase;
+		}
+		.separator-horizontal{
+			margin: 20px auto;
+		}
+	}
+	.part.contacts{
+		ul{
+			display: block;
+			width: 100%;
+			overflow: hidden;
+		}
+		li{
+			display: block;
+			width: 100%;
+			margin-top: 10px;
+			overflow: hidden;
+		}
+		.item{
+			display: inline-block;
+			font-size: .875em;
+			padding: 5px 20px 0 0;
+			text-align: left;
+		}
+		*[class^="hr"]{
+			display: inline-block;
+			margin-right: 5px;
+			color: @black;
+			font-size: 1.25em;
+		}
+	}
+	.part.navigation{
+		width: 50%;
+		ul,
+		.list-holder{
+			width: 100%;
+			overflow: hidden;
+		}
+		li{
+			display: block;
 			width: 50%;
-			ul,
-			.list-holder{
-				width: 100%;
-				overflow: hidden;
+			float: left;
+			padding-left: 20px;
+			box-sizing: border-box;
+			overflow: hidden;
+			& > a{
+				line-height: 20px;
+				color: @black;
+				transition: all .5s @easing;
 			}
-			li{
-				display: block;
-				width: 50%;
-				float: left;
-				padding-left: 20px;
-				box-sizing: border-box;
-				overflow: hidden;
-				& > a{
-					line-height: 20px;
+			&:hover a{
+				color: @green;
+			}
+		}
+	}
+}
+#footer{
+	width: 100%;
+	height: 120px;
+	position: relative;
+	background: @green;
+	overflow: hidden;
+	&.sticky{ margin-top: -120px; }
+	.logo{
+		display: block;
+		width: 300px;
+		float: left;
+	}
+	.social-holder{
+		width: 160px;
+		position: absolute;
+		top: 5px;
+		left: 50%;
+		margin-left: -80px;
+		li{
+			display: block;
+			float: left;
+			a{
+				color: @white;
+				font-size: 1.125em;
+				transition: all .5s @easing;
+				&:hover{
 					color: @black;
-					transition: all .5s @easing;
-				}
-				&:hover a{
-					color: @green;
 				}
 			}
 		}
 	}
-	& > footer{
+	.copyright{
+		display: block;
 		width: 100%;
-		max-height: 120px;
-		margin: 0 auto;
-		position: relative;
-		background: @green;
+		position: absolute;
+		left: 0;
+		bottom: 0;
+		font-size: .875em;
+		color: @white;
+		padding-bottom: 10px;
 		overflow: hidden;
-		.logo{
-			display: block;
-			width: 300px;
-			float: left;
-		}
-		.social-holder{
-			width: 160px;
-			position: absolute;
-			top: 5px;
-			left: 50%;
-			margin-left: -80px;
-			li{
-				display: block;
-				float: left;
-				a{
-					color: @white;
-					font-size: 1.125em;
-					transition: all .5s @easing;
-					&:hover{
-						color: @black;
-					}
-				}
-			}
-		}
-		.copyright{
-			display: block;
-			width: 100%;
-			position: absolute;
-			left: 0;
-			bottom: 0;
-			font-size: .875em;
+	}
+	.developers{
+		width: 300px;
+		float: right;
+		overflow: hidden;
+		p{
+			margin-top: 18px;
+			text-align: right;
 			color: @white;
-			padding-bottom: 10px;
-			overflow: hidden;
+			font-size: .875em;
 		}
-		.developers{
-			width: 300px;
+		img{
+			margin-top: -10px;
+			width: 160px;
 			float: right;
-			overflow: hidden;
-			p{
-				margin-top: 18px;
-				text-align: right;
-				color: @white;
-				font-size: .875em;
-			}
-			img{
-				margin-top: -10px;
-				width: 160px;
-				float: right;
-			}
 		}
 	}
 }
