--- a/assets/css/home.less
+++ b/assets/css/home.less
@@ -273,7 +273,7 @@
 			text-align: center;
 		}
 		a{
-			display: none;
+			display: inline-block;
 			margin: 20px 20px 0 0;
 			color: @green;
 			& > .long-arrow{
