--- a/assets/css/suppliers.less
+++ b/assets/css/suppliers.less
@@ -40,7 +40,16 @@
 				margin: 30px auto 40px;
 			}
 		}
-
+	}
+	&.supplier-inside{
+		figure{
+			display: inline-block;
+			width: 160px;
+			height: auto;
+			float: left;
+			margin: 0 20px 0 0;
+			overflow: hidden;
+		}
 	}
 }
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
