suppliers on main fix

--- a/assets/css/home.less
+++ b/assets/css/home.less
@@ -204,7 +204,7 @@
 .outer.suppliers-holder{
 	background: @grey;
 	.inner{
-		max-width: 100%;
+		max-width: 1200px;
 	}
 	.suppliers{
 		width: 100%;
@@ -213,7 +213,7 @@
 		li{
 			display: inline-block;
 			vertical-align: middle;
-			width: 100px;
+			width: 120px;
 			height: auto;
 			position: relative;
 			margin: 0 20px 40px;
@@ -224,10 +224,10 @@
 				position: relative;
 				transition: all .5s @easing;
 				transform: scale(1);
-				opacity: .75;
+				opacity: .5;
 				backface-visibility: hidden;
 				&:hover{
-					transform: scale(1.5);
+					transform: scale(1.25);
 					opacity: 1;
 				}
 			}
