--- a/assets/css/products.less
+++ b/assets/css/products.less
@@ -2,11 +2,18 @@
 @import "lib/grid.less";
 @import "lib/slider.less";
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
-/*	layout start							  */
+/*	layout start							  					*/
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 #content-info-holder{
 	.grid{
 		.col{
+			width: ~"calc(50% - 10px)";
+			&:nth-child(2){ margin: 0 0 0 20px; }
+			.slider-holder{
+				width: ~"calc(100% - 40px)";
+				margin: 20px 20px 0;
+				box-sizing: border-box;
+			}
 			h2{
 				margin: 0;
 				padding: 20px 20px 10px;
@@ -37,5 +44,5 @@
 	}
 }
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
-/*	layout start							  */
+/*	layout start							  					*/
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
