--- a/assets/css/products.less
+++ b/assets/css/products.less
@@ -7,14 +7,17 @@
 #content-info-holder{
 	.grid{
 		.col{
-			width: ~"calc(50% - 10px)";
-			&:nth-child(2){ margin: 0 0 0 20px; }
 			.slider-holder{
 				width: ~"calc(100% - 40px)";
 				margin: 20px 20px 0;
 				box-sizing: border-box;
+				background: @grey;
+				figure, img{
+					background: @grey;
+				}
 			}
 			h2{
+				font-size: 1.125em;
 				margin: 0;
 				padding: 20px 20px 10px;
 			}
