header private, auth, small fixes

--- a/assets/css/contacts.less
+++ b/assets/css/contacts.less
@@ -21,7 +21,7 @@
 				text-align: center;
 				padding: 20px;
 			}
-			.separator-horizontal{
+			.sprtr-h{
 				margin: 20px auto;
 				background: @black;
 			}
@@ -68,7 +68,7 @@
 					text-align: center;
 					font-size: 1em;
 				}
-				.separator-horizontal{
+				.sprtr-h{
 					margin: 20px auto 0;
 				}
 				ul > li{
