--- a/assets/css/home.less
+++ b/assets/css/home.less
@@ -1,4 +1,5 @@
 @import "lib/common.less";
+@import "lib/forms.less";
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 /*	layout start							  */
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
@@ -101,7 +102,7 @@
 			float: left;
 			overflow: hidden;
 		}
-		.separator-horizontal{
+		.sprtr-h{
 			margin-top: 20px;
 			background: @black;
 		}
@@ -243,7 +244,7 @@
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 .outer.questions-holder{
 	margin-bottom: 60px;
-	.separator-horizontal{
+	.sprtr-h{
 		margin-bottom: 40px;
 	}
 	.questions{
@@ -259,7 +260,7 @@
 			font-size: 3em;
 			padding-bottom: 10px;
 		}
-		.separator-horizontal{
+		.sprtr-h{
 			background: @black;
 			margin: 20px auto;
 		}
