--- a/assets/css/lib/settings.less
+++ b/assets/css/lib/settings.less
@@ -7,6 +7,15 @@
 @black: #2b2b2b;
 
 @easing: cubic-bezier(0.69, 0.29, 0.35, 0.78);
+
+@redLight: #FFBABA;
+@redDark: #D8000C;
+@greenLight: #DFF2BF;
+@greenDark: #4F8A10;
+@blueLight: #BDE5F8;
+@blueDark: #00529B;
+@yellowLight: #FEEFB3;
+@yellowDark: #9F6000;
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 /*	variables end							  */
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
@@ -173,121 +182,16 @@ img, figure img{
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
-/*	forms start								  */
-/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
-form{
-	width: 100%;
-	max-width: 800px;
-}
-.field-area{
-	width: 100%;
-	margin-bottom: 20px;
-	position: relative;
-	overflow: hidden;
-}
-
-::-webkit-input-placeholder{
-	color: darken(@grey, 20%);
-}
-:-moz-placeholder{
-	color: darken(@grey, 20%);
-}
-::-moz-placeholder{
-	color: darken(@grey, 20%);
-}
-:-ms-input-placeholder{
-	color: darken(@grey, 20%);
-}
-
-input[type=text],
-input[type=tel],
-input[type=password],
-input[type=email]{
-	display: block;
-	width: 100%;
-	height: 40px;
-	border: 2px solid @black;
-	box-sizing: border-box;
-	line-height: 36px;
-	font-family: "Ubuntu", sans-serif;
-	font-weight: 400;
-	font-size: .875em;
-	text-indent: 10px;
-	color: @black;
-	transition: all .5s @easing;
-	& + label{
-		display: block;
-		width: 40px;
-		height: 40px;
-		position: absolute;
-		top: 0;
-		right: 0;
-		background: @black;
-		text-align: center;
-		transition: all .5s @easing;
-		cursor: text;
-		overflow: hidden;
-		& > span{
-			display: inline-block;
-			line-height: 36px;
-			color: @white;
-			font-size: 1em;
-		}
-	}
-	&:hover,
-	&:focus{
-		border: 2px solid @green;
-		& + label{
-			background: @green;
-		}
-	}
-}
-
-button[type="submit"]{
-	display: block;
-	width: 180px;
-	height: 40px;
-	border: none;
-	padding: 0;
-	margin: 0 auto;
-	background: transparent;
-	overflow: hidden;
-	& > span{
-		display: block;
-		width: 100%;
-		height: 100%;
-		border: 2px solid @green;
-		background: @white;
-		font-family: "Ubuntu", sans-serif;
-		font-size: .875em;
-		line-height: 36px;
-		text-transform: uppercase;
-		text-align: center;
-		color: @green;
-		outline: none;
-		transition: all .5s @easing;
-		box-sizing: border-box;
-	}
-	&:hover span{
-		background: @green;
-		color: @white;
-	}
-}
-/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
-/*	forms end								  */
-/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
-
-/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 /*	separators start						  */
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
-.separator-vertical{
+.sprtr-v{
 	display: inline-block;
 	width: 2px;
 	height: 100%;
 	background: @green;
 	overflow: hidden;
 }
-.separator-horizontal{
+.sprtr-h{
 	display: block;
 	width: 40px;
 	height: 2px;
