--- a/assets/css/lib/icons.less
+++ b/assets/css/lib/icons.less
@@ -139,4 +139,19 @@
 .hr-safari:before {
   content: "\e021";
 }
+.hr-girl:before {
+  content: "\e022";
+}
+.hr-stats:before {
+  content: "\e023";
+}
+.hr-personal:before {
+  content: "\e024";
+}
+.hr-cart:before {
+  content: "\e025";
+}
+.hr-exit:before {
+  content: "\e026";
+}
 
