--- a/assets/css/lib/settings.less
+++ b/assets/css/lib/settings.less
@@ -86,6 +86,9 @@ img, figure img{
 .btn-large{
 	width: 220px;
 	height: 60px;
+	&.square{
+		width: 60px;
+	}
 	& > a,
 	& > span{
 		line-height: 56px;
