--- a/assets/css/auth.less
+++ b/assets/css/auth.less
@@ -1,12 +1,9 @@
 @import "lib/common.less";
+@import "lib/common-private.less";
 @import "lib/forms.less";
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 /*	layout start							  					*/
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
-#page,
-#content{
-	height: 100%;
-}
 #content{
 	position: relative;
 	background: @grey;
@@ -24,11 +21,8 @@
 	position: absolute;
 	top: 50%;
 	left: 50%;
-	transform: translateX(-50%) translateY(-50%);
+	transform: translateX(-50%) translateY(-60%);
 	background: @white;
-	border: 1px solid @grey;
-	box-sizing: border-box;
-	box-shadow: 0px 0px 5px 0px lighten(@black, 50%);
 	overflow: hidden;
 	h1{
 		font-size: 1.25em;
