--- a/assets/css/kids.less
+++ b/assets/css/kids.less
@@ -1,10 +1,39 @@
 @import "lib/common.less";
 @import "lib/common-private.less";
 @import "lib/breadcrumbs.less";
+@import "lib/pagination.less";
+@import "lib/grid-private.less";
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 /*	layout start							 					 */
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+/*	layout start												 */
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+/*	layout start							 					 */
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+#content-info-holder{
+	.kid-holder{
+		margin-top: 40px;
+		padding: 0 20px;
+		box-sizing: border-box;
+		.title-holder{
+			h2{
+				line-height: 40px;
+				span{
+					display: inline-block;
+					vertical-align: middle;
+					padding-right: 10px;
+				}
+			}
+			.sprtr-h{
+				margin: 20px 0;
+			}
+		}
+	}
+}
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 /*	layout start												 */
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
