--- a/assets/css/lib/icons.less
+++ b/assets/css/lib/icons.less
@@ -154,4 +154,13 @@
 .hr-exit:before {
   content: "\e026";
 }
+.hr-male:before {
+  content: "\e027";
+}
+.hr-female:before {
+  content: "\e028";
+}
+.hr-school:before {
+  content: "\e029";
+}
 
