--- a/assets/css/lib/common-private.less
+++ b/assets/css/lib/common-private.less
@@ -126,8 +126,13 @@
 	float: left;
 	margin: 0 20px 0 0;
 	overflow: hidden;
+	.text-holder{
+		p{
+			padding: 20px 40px 0;
+		}
+	}
 	.outer.scrollable-holder{
-		padding-top: 30px;
+		padding: 30px 0 40px;
 		margin-top: -30px;
 		box-sizing: border-box;
 	}
@@ -209,6 +214,14 @@
 	p > strong{
 		font-weight: 500;
 	}
+}
+.action-panel-holder{
+	width: 100%;
+	height: 40px;
+	margin-top: -40px;
+	background: @grey;
+	overflow: hidden;
+	
 }
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 /*	info holder end							 				 */
