--- a/assets/css/lib/common.less
+++ b/assets/css/lib/common.less
@@ -31,7 +31,7 @@ a{ text-decoration: none; }
 .inner,
 .grid,
 .row,
-.cell{
+.col{
 	width: 100%;
 	height: auto;
 	overflow: hidden;
@@ -206,6 +206,7 @@ a{ text-decoration: none; }
 				color: @black;
 				border: none;
 				line-height: 60px;
+				font-size: 1.125em;
 				&:hover{
 					color: @green;
 				}
