--- a/assets/css/lib/icons.less
+++ b/assets/css/lib/icons.less
@@ -163,4 +163,10 @@
 .hr-school:before {
   content: "\e029";
 }
+.hr-coin:before {
+  content: "\e02a";
+}
+.hr-accept:before {
+  content: "\e02b";
+}
 
