--- a/assets/css/lib/common-private.less
+++ b/assets/css/lib/common-private.less
@@ -135,6 +135,9 @@
 		padding: 30px 0 40px;
 		margin-top: -30px;
 		box-sizing: border-box;
+		&.no-action-panel{
+			padding: 30px 0 0;
+		}
 	}
 	h1, h2, h3{
 		margin-top: 20px;
