--- a/assets/css/lib/grid-private.less
+++ b/assets/css/lib/grid-private.less
@@ -10,7 +10,7 @@
 		}
 		.col{
 			width: ~"calc(50% - 10px)";
-			background: @white;
+			background: transparent;
 			float: left;
 			position: relative;
 			box-sizing: border-box;
