--- a/assets/css/lib/pagination.less
+++ b/assets/css/lib/pagination.less
@@ -2,18 +2,24 @@
 /*	pagination start						  */
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 #pagination-holder{
+	width: 280px;
+	float: right;
+	overflow: hidden;
 	ul{
-		width: 280px;
-		float: right;
+		width: 100%;
+		text-align: right;
 		overflow: hidden;
 	}
 	li{
-		display: block;
+		display: inline-block;
+		vertical-align: top;
 		width: 40px;
 		height: 40px;
-		float: left;
+		white-space: -1;
+		margin-left: -4px;
 		text-align: center;
 		overflow: hidden;
+		&:first-child{ margin-left: 0; }
 		a{
 			display: block;
 			width: 100%;
