--- a/assets/css/lib/grid-private.less
+++ b/assets/css/lib/grid-private.less
@@ -57,6 +57,16 @@
 			}
 		}
 	}
+	.products-holder{
+		.grid{
+			margin: 20px 0;
+			.col{
+				&:first-child{
+					margin-left: 0;
+				}
+			}
+		}
+	}
 }
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 /*	grid end								  */
