--- a/assets/css/kids.less
+++ b/assets/css/kids.less
@@ -17,9 +17,14 @@
 /*	detailed start						 					 */
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 #content-info-holder{
+	.scrollable-holder{
+		.scrollable{
+			padding-left: 20px;
+			h2{ padding-bottom: 20px; }
+		}
+	}
 	.kid-holder{
 		margin-top: 20px;
-		padding-left: 20px;
 		box-sizing: border-box;
 		overflow: hidden;
 		.inner{
@@ -86,6 +91,7 @@
 				display: inline-block;
 				padding: 0 20px;
 				line-height: 40px;
+				font-size: 1.125em;
 				transition: all .5s @easing;
 				.icon{
 					display: inline-block;
@@ -103,6 +109,7 @@
 				vertical-align: middle;
 				width: auto;
 				float: right;
+				margin-right: 20px;
 				& > span{
 					text-align: center;
 					background: @white;
@@ -192,11 +199,11 @@
 	}
 }
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
-/*	detailed end											 */
+/*	detailed end							  */
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
-/*	stats start								  				*/
+/*	stats start								  */
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 #content-info-holder{
 	.outer.scrollable-holder{
@@ -213,6 +220,18 @@
 	}
 }
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
-/*	stats end								 				 */
+/*	stats end								  */
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+/*	products start							  */
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+#content-info-holder{
+	.outer.scrollable-holder.products-holder{
+		padding: 130px 0 60px;
+		margin-top: -130px;
+	}
+}
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+/*	products end							  */
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
