--- a/assets/css/lib/common-private.less
+++ b/assets/css/lib/common-private.less
@@ -218,6 +218,47 @@
 		font-weight: 500;
 	}
 }
+.categories-panel-holder{
+	width: 100%;
+	padding-left: 20px;
+	box-sizing: border-box;
+	overflow: hidden;
+	h2{
+		line-height: 20px;
+		padding: 20px 0;
+	}
+	ul{
+		width: 100%;
+		height: 40px;
+		background: @grey;
+		text-align: left;
+	}
+	li{
+		display: inline-block;
+		vertical-align: top;
+		white-space: -1;
+		margin-left: -4px;
+		&:first-child{
+			margin-left: 0;
+		}
+		a{
+			display: block;
+			height: 40px;
+			line-height: 40px;
+			padding: 0 20px;
+			box-sizing: border-box;
+			transition: all .5s @easing;
+			overflow: hidden;
+		}
+		&:hover,
+		&.active{
+			a{
+				background: @green;
+				color: @white;
+			}
+		}
+	}
+}
 .action-panel-holder{
 	width: 100%;
 	height: 40px;
