private office update

--- a/assets/css/lib/common-private.less
+++ b/assets/css/lib/common-private.less
@@ -249,6 +249,11 @@
 			box-sizing: border-box;
 			transition: all .5s @easing;
 			overflow: hidden;
+			& > span{
+				color: inherit;
+				font-size: inherit;
+				padding-right: 5px;
+			}
 		}
 		&:hover,
 		&.active{
