--- a/assets/css/kids.less
+++ b/assets/css/kids.less
@@ -3,126 +3,12 @@
 @import "lib/breadcrumbs.less";
 @import "lib/pagination.less";
 @import "lib/grid-private.less";
+@import "lib/personal-data.less";
 @import "lib/tables.less";
 @import "lib/loader.less";
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
-/*	layout start							 					 */
+/*	detailed start						 	  */
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
-
-/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
-/*	layout start												 */
-/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
-
-/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
-/*	detailed start						 					 */
-/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
-#content-info-holder{
-	.scrollable-holder{
-		.scrollable{
-			padding-left: 20px;
-			h2{ padding-bottom: 20px; }
-		}
-	}
-	.kid-holder{
-		margin-top: 20px;
-		box-sizing: border-box;
-		overflow: hidden;
-		.inner{
-			width: 100%;
-			background: @grey;
-			padding-bottom: 20px;
-			box-sizing: border-box;
-			overflow: hidden;
-		}
-		h2{
-			padding: 20px;
-			background: @grey;
-			border-bottom: 2px solid @green;
-			box-sizing: border-box;
-		}
-		h3{
-			font-size: 1.5em;
-			padding: 40px 40px 20px;
-			margin: 0;
-			span{
-				display: inline-block;
-				vertical-align: middle;
-				padding-right: 10px;
-			}
-		}
-		.info-holder{
-			width: 100%;
-			padding: 0 40px 20px;
-			box-sizing: border-box;
-			overflow: hidden;
-			.col{
-				width: 50%;
-				float: left;
-				padding-right: 20px;
-				box-sizing: border-box;
-				&:nth-child(2){
-					padding-left: 20px;
-					padding-right: 0;
-				}
-				& > span{
-					display: inline-block;
-					vertical-align: middle;
-					color: @black;
-					font-size: 1em;
-					line-height: 40px;
-					.icon{
-						display: inline-block;
-						vertical-align: middle;
-						font-size: 1.125em;
-						padding-right: 10px;
-					}
-				}
-				p{
-					padding: 0;
-				}
-			}
-		}
-		.links-holder{
-			width: 100%;
-			padding: 0 20px;
-			box-sizing: border-box;
-			overflow: hidden;
-			& > a{
-				display: inline-block;
-				padding: 0 20px;
-				line-height: 40px;
-				font-size: 1.125em;
-				transition: all .5s @easing;
-				.icon{
-					display: inline-block;
-					vertical-align: middle;
-					padding-right: 5px;
-					font-size: .875em;
-					color: inherit;
-				}
-				&:hover{
-					color: @green;
-				}
-			}
-			& > .btn-small{
-				display: inline-block;
-				vertical-align: middle;
-				width: auto;
-				float: right;
-				margin-right: 20px;
-				& > span{
-					text-align: center;
-					background: @white;
-					text-transform: none;
-					padding: 0 20px;
-					&:hover{
-						background: @green;
-					}
-				}
-			}
-		}
-	}
-}
 #limit-form{
 	display: block;
 	min-height: 60px;
@@ -230,6 +116,12 @@
 	.outer.scrollable-holder.products-holder{
 		padding: 130px 0 60px;
 		margin-top: -130px;
+		.scrollable{
+			& > .btn-enable,
+			& > .btn-disable{
+				margin-bottom: 20px;
+			}
+		}
 	}
 }
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
