private office fixs

--- a/assets/css/kids.less
+++ b/assets/css/kids.less
@@ -95,14 +95,12 @@
 	.outer.scrollable-holder{
 		padding: 50px 0 60px;
 	}
-	.stats-holder{
-		padding-left: 20px;
-		box-sizing: border-box;
-		overflow: hidden;
-		h2{ padding-bottom: 20px; }
+	h2{
+		padding: 0 0 20px 20px;
 	}
 	.table-holder{
 		padding: 0;
+		margin-left: 20px;
 	}
 }
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
@@ -114,12 +112,15 @@
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 #content-info-holder{
 	.outer.scrollable-holder.products-holder{
-		padding: 130px 0 60px;
-		margin-top: -130px;
 		.scrollable{
 			& > .btn-enable,
 			& > .btn-disable{
 				margin-bottom: 20px;
+			}
+		}
+		.categories-panel-holder{
+			h2{
+				padding: 0 0 20px;
 			}
 		}
 	}
