--- a/assets/css/lib/personal-data.less
+++ b/assets/css/lib/personal-data.less
@@ -10,6 +10,7 @@
 	}
 	.personal-data-holder{
 		margin-top: 20px;
+		padding-left: 20px;
 		box-sizing: border-box;
 		overflow: hidden;
 		.inner{
@@ -54,7 +55,7 @@
 					vertical-align: middle;
 					color: @black;
 					font-size: 1em;
-					line-height: 40px;
+					padding-bottom: 10px;
 					.icon{
 						display: inline-block;
 						vertical-align: middle;
