--- a/assets/css/lib/grid-private.less
+++ b/assets/css/lib/grid-private.less
@@ -9,14 +9,14 @@
 			margin-bottom: 20px;
 		}
 		.col{
-			width: ~"calc(50% - 10px)";
-			background: transparent;
+			width: 48.88888888888889%;
+			background: @grey;
 			float: left;
 			position: relative;
 			box-sizing: border-box;
 			overflow: hidden;
 			&:last-child{
-				margin-left: 20px;
+				margin-left: 2.222222222222222%;
 			}
 			.inner{
 				.title-holder{
@@ -51,8 +51,7 @@
 					}
 				}
 				.btn-more{
-					float: left;
-					margin: 20px 0 20px 20px;
+					margin: 20px auto;
 				}
 			}
 		}
@@ -60,7 +59,7 @@
 	.products-holder{
 		.grid{
 			width: 100%;
-			margin: 20px 0;
+			margin: 20px 0 20px 20px;
 			.col{
 				width: 31.85185185185186%;
 				margin: 0;
