top panel fixes in private office

--- a/assets/css/lib/grid-private.less
+++ b/assets/css/lib/grid-private.less
@@ -55,17 +55,13 @@
 				}
 			}
 		}
-	}
-	.products-holder{
-		.grid{
-			width: 100%;
-			margin: 20px 0 20px 20px;
+		&.triple-col{
 			.col{
 				width: 31.85185185185186%;
-				margin: 0;
+				margin-right: 2.222222222222215%;
 				background: @grey;
-				&:nth-child(2){
-					margin: 0 2.222222222222215%;
+				&:last-child{
+					margin: 0;
 				}
 				figure{
 					padding: 20px;
