--- a/assets/css/stats.less
+++ b/assets/css/stats.less
@@ -8,10 +8,16 @@
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 #content-info-holder{
 	.outer.scrollable-holder{
-		padding: 130px 0 60px;
-		margin-top: -130px;
+		padding: 150px 0 60px;
+		margin-top: -150px;
 		.scrollable{
 			padding: 0 20px;
+		}
+	}
+	.action-panel-holder{
+		&.top{
+			height: 100px;
+			.categories-panel-holder{ margin-top: 20px; }
 		}
 	}
 	.table-holder{
