--- a/assets/css/kids.less
+++ b/assets/css/kids.less
@@ -5,10 +5,18 @@
 @import "lib/grid-private.less";
 @import "lib/personal-data.less";
 @import "lib/tables.less";
+@import "lib/forms.less";
 @import "lib/loader.less";
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 /*	detailed start						 	  */
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
+#content-info-holder{
+	.outer.scrollable-holder.kid-view{
+		padding: 30px 0 40px;
+		margin-top: -30px;
+	}
+}
+
 #limit-form{
 	display: block;
 	min-height: 60px;
@@ -91,12 +99,13 @@
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 /*	stats start								  */
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
-#content-info-holder{
-	.outer.scrollable-holder{
-		padding: 50px 0 60px;
+#content-info-holder.kid-stats-holder{
+	.action-panel-holder.top{
+		margin-bottom: 20px;
 	}
-	h2{
-		padding: 0 0 20px 20px;
+	.outer.scrollable-holder{
+		padding: 110px 0 60px;
+		margin-top: -110px;
 	}
 	.table-holder{
 		padding: 0;
@@ -111,16 +120,54 @@
 /*	products start							  */
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 #content-info-holder{
-	.outer.scrollable-holder.products-holder{
-		.scrollable{
-			& > .btn-enable,
-			& > .btn-disable{
-				margin-bottom: 20px;
+	&.kid-products-holder{
+		.action-panel-holder.top{
+			height: 105px;
+			h2{
+				line-height: 20px;
+				padding-bottom: 5px;
+			}
+			p{
+				line-height: 20px;
+				padding: 0;
+			}
+			button[type="submit"]{
+				width: 200px;
+				margin: 20px 0 0 20px;
+				float: left;
+				span{
+					text-align: center;
+					text-transform: none;
+				}
 			}
 		}
 		.categories-panel-holder{
-			h2{
-				padding: 0 0 20px;
+			width: ~"calc(100% - 220px)";
+			margin-top: 20px;
+			float: left;
+		}
+		.outer.scrollable-holder{
+			padding: 155px 0 0;
+			margin-top: -155px;
+		}
+		.grid{
+			margin-bottom: 20px;
+			.sprtr-h{ margin: 20px 0; }
+			input[type="checkbox"]{
+				& + label.col{
+					transition: all .5s @easing;
+					cursor: pointer;
+					.info{
+						.price{ transition: all .5s @easing; }
+					}
+				}
+				& + label.col:hover,
+				&:checked + label.col{
+					background: @green;
+					.info{
+						.price{ color: @white; }
+					}
+				}
 			}
 		}
 	}
