--- a/assets/css/lib/common-private.less
+++ b/assets/css/lib/common-private.less
@@ -148,11 +148,11 @@
 	margin: 0 20px 0 0;
 	overflow: hidden;
 	.text-holder{
-		p{ padding: 0 20px; }
+		p{ padding: 20px 20px 0; }
 	}
 	.outer.scrollable-holder{
-		padding: 30px 0 40px;
-		margin-top: -30px;
+		padding: 70px 0 40px;
+		margin-top: -70px;
 		box-sizing: border-box;
 		&.no-action-panel{
 			padding: 30px 0 0;
@@ -238,16 +238,11 @@
 		font-weight: 500;
 	}
 }
+
 #content-info-holder{
 	.categories-panel-holder{
 		width: 100%;
-		margin-left: 20px;
-		box-sizing: border-box;
 		overflow: hidden;
-		h2{
-			line-height: 20px;
-			padding: 20px 0;
-		}
 		ul{
 			width: 100%;
 			height: 40px;
@@ -286,13 +281,28 @@
 		}
 	}
 }
-.action-panel-holder{
-	width: 100%;
-	height: 40px;
-	margin-top: -40px;
-	background: @grey;
-	overflow: hidden;
+
+#content-info-holder{
+	.action-panel-holder{
+		width: 100%;
+		height: 40px;
+		margin-top: 20px;
+		background: transparent;
+		overflow: hidden;
+		h2{
+			padding: 0;
+			line-height: 40px;
+		}
+		&.top{
+			padding-left: 20px;
+			box-sizing: border-box;
+		}
+		&.bottom{
+			margin-top: -40px;
+			background: @grey;
+		}
+	}
 }
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
-/*	info holder end							 				 */
+/*	info holder end							  */
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
