--- a/assets/css/lib/forms.less
+++ b/assets/css/lib/forms.less
@@ -84,6 +84,11 @@ input[type=email]{
 	}
 }
 
+input[type="radio"],
+input[type="checkbox"]{
+	display: none;
+}
+
 button[type="submit"]{
 	display: block;
 	width: 180px;
@@ -100,7 +105,7 @@ button[type="submit"]{
 		border: 2px solid @green;
 		background: @white;
 		font-family: "Ubuntu", sans-serif;
-		font-size: .875em;
+		font-size: 1em;
 		line-height: 36px;
 		text-transform: uppercase;
 		text-align: center;
