--- a/assets/css/personal.less
+++ b/assets/css/personal.less
@@ -7,6 +7,10 @@
 /*	parent start						 	  */
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 #content-info-holder{
+	.outer.scrollable-holder{
+		padding: 30px 0 40px;
+		margin-top: -30px;
+	}
 	.personal-data-holder{
 		.inner{ padding-bottom: 0; }
 		.info-holder{
