--- a/assets/css/lib/common.less
+++ b/assets/css/lib/common.less
@@ -154,7 +154,7 @@ a{ text-decoration: none; }
 			}
 			&.call-center-holder{
 				& > li a{
-					font-size: .875em;
+					font-size: 1em;
 					color: @green;
 				}
 			}
