--- a/assets/css/suppliers.less
+++ b/assets/css/suppliers.less
@@ -7,16 +7,41 @@
 	.grid{
 		.col{
 			h2, p{ text-align: center; }
+			figure{ margin: 20px auto 0px; }
 		}
 	}
 	&.supplier-inside{
+		position: relative;
+		overflow: auto;
 		figure{
-			display: inline-block;
-			width: 160px;
+			width: 120px;
 			height: auto;
-			float: left;
-			margin: 0 20px 0 0;
+			position: absolute;
+			top: -15px;
+			right: 0;
+		}
+		h3{
+			margin-bottom: 20px;
+			font-weight: 500;
+		}
+		.trade-marks-holder{
+			width: 100%;
+			margin-bottom: 20px;
 			overflow: hidden;
+			li{
+				display: block;
+				width: 120px;
+				margin-right: 20px;
+				float: left;
+				background: @grey;
+				overflow: hidden;
+				figure{
+					display: block;
+					width: 100%;
+					height: auto;
+					position: static;
+				}
+			}
 		}
 	}
 }
